--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html {
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     gap: 10px;
     grid-auto-rows: 150px;
+    grid-auto-flow: dense;
 }
 
 
@@ -16,14 +17,15 @@ html {
     height: 150px;*/
 }
 
-
-@media (min-width: 500px) {
-    .box:nth-child(3n+2){
+@media (min-width: 225px) {
+    .is-large {
+        grid-column: span 2;
+        grid-row: span 2;
+    }
+}
+@media (min-width: 400px) {
+    .box:nth-child(3n+3){
         background: #34b399;
     }
 }
 
-.is-large {
-    grid-column: span 2;
-    grid-row: span 2;
-}
